[tool.poetry]
name = "titiler-cached"
version = "0.1.0"
description = ""
authors = ["Andrea Giardini <contact@andreagiardini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
titiler = {extras = ["core"], version = "^0.18.10"}
aiocache = {extras = ["redis"], version = "^0.12.3"}
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
